<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="82dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="82dp"
        android:background="#FFFFFF"
        android:fontFamily="cursive"
        android:padding="9sp"
        android:text="@string/Instagram_Icon"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="265dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:padding="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="@drawable/couston_input"
            android:ems="10"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12sp"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="@drawable/couston_input"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:minHeight="48dp"
            android:padding="12sp"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:gravity="end"
            android:text="@string/forgotPassword"
            android:textColor="@android:color/holo_blue_dark"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="@drawable/custom_button"
            android:padding="12sp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout

            android:id="@+id/linearLayout1"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:padding="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/mass1"
            android:textColor="@android:color/holo_blue_dark"
            tools:ignore="TextContrastCheck"  />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/mess2"
            android:textColor="@color/d_gray"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10sp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
            app:layout_constraintStart_toStartOf="@+id/linearLayout1"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/mess3"
                tools:ignore="TextContrastCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/mess4"
                android:textColor="@android:color/holo_blue_dark"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/mass"
        android:textColor="@color/d_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>